--- a/src/App.less
+++ b/src/App.less
@@ -1,5 +1,21 @@
 @import "~antd/dist/antd.less";
 
+body {
+  width: 100vw;
+  min-height: 100vh;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+}
+
 .App {
   text-align: center;
+  height: 100%;
+  width: 100%;
+}
+
+.ant-upload-list {
+  width: 186px;
 }
