trying to implement tensorflow.js...

--- a/src/App.less
+++ b/src/App.less
@@ -19,3 +19,20 @@ body {
 .ant-upload-list {
   width: 186px;
 }
+
+.timer-card {
+  width: 200px;
+  position: absolute !important;
+  right: 20px;
+  top: 100px;
+  background-color: #333;
+}
+
+.sidebar {
+  background-color: #aa5555;
+  color: white;
+}
+
+.sidebar-form {
+  margin-top: 100px;
+}
