--- a/src/App.less
+++ b/src/App.less
@@ -19,3 +19,20 @@ body {
 .ant-upload-list {
   width: 186px;
 }
+
+.background {
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
+}
+
+.homepage-hero h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: white !important;
+  margin: 0;
+}
