--- a/src/App.less
+++ b/src/App.less
@@ -3,6 +3,8 @@
 body {
   width: 100vw;
   min-height: 100vh;
+  padding-top: 90px;
+  overflow-x: hidden;
 }
 
 #root {
@@ -25,14 +27,4 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 100%;
-}
-
-.homepage-hero h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: white !important;
-  margin: 0;
 }
