--- a/src/App.less
+++ b/src/App.less
@@ -22,6 +22,12 @@ body {
   width: 186px;
 }
 
+.ant-card-actions {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
 .background {
   background-position: bottom;
   background-repeat: no-repeat;
