--- a/src/screens/user/user.module.css
+++ b/src/screens/user/user.module.css
@@ -81,4 +81,37 @@
   border: 2px solid f56322;
   box-shadow: 1px 1px 13px 2px rgba(100, 50, 0, 0.3);
   border-radius: 20px;
+  padding: 50px;
+}
+
+.buttonsWrapper {
+  display: flex;
+  width: 170px;
+  justify-content: space-between;
+  margin-top: 15px;
+}
+
+.formImage {
+  height: 400px;
+  width: 400px;
+  align-self: center;
+  object-fit: contain;
+}
+
+.recipeFormCard {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  text-align: left;
+  background-color: white;
+  border: 2px solid f56322;
+  box-shadow: 1px 1px 13px 2px rgba(100, 50, 0, 0.3);
+  border-radius: 20px;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  min-width: 700px;
+}
+
+.formButtonWide {
+  width: 100%;
 }
