--- a/src/screens/user/user.module.css
+++ b/src/screens/user/user.module.css
@@ -82,6 +82,7 @@
   box-shadow: 1px 1px 13px 2px rgba(100, 50, 0, 0.3);
   border-radius: 20px;
   padding: 50px;
+  width: 500px;
 }
 
 .buttonsWrapper {
